lang/macro/tests/ui/fail/M-03-message-returns-self.stderr
error: ink! messages and methods must not return `Self`
  --> $DIR/M-03-message-returns-self.rs:15:36
   |
15 |         fn missing_self_arg(&self) -> Self {}
   |                                    ^^^^^^^
